@@ -163,7 +163,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("RNGMIX Version 2.13.0")
+  message("RNGMIX Version 2.13.1")
 
   flush.console()
 
